# bronze

./: .env.example  README.md  bronze_dependencies.yaml  pyproject.toml
scripts/: run_discord_pipeline.py  test_discord_extractor.py
scripts/pipelines/: discord_pipeline.py  notion_pipeline.py  sample_pipeline.py
src/: config.py
src/bronze/ddl/: create_bronze_table.sql  create_discord_channels_table.sql  create_discord_chat_table.sql  create_user_table.sql
src/bronze/extractors/: discord_extractor.py  notion_extractor.py  sample_extractor.py
src/bronze/utils/: extract_discord_to_csv.py  pipeline.py
tests/extractors/: test_discord_extractor.py  test_discord_pipeline.py
